@@ -1,4 +1,6 @@
 require File.expand_path '../xref_test_case', __FILE__
+require 'rdoc/code_objects'
+require 'rdoc/generator/markup'
 
 class RDocAnyMethodTest < XrefTestCase
 
@@ -34,6 +36,45 @@ method(a, b) { |c, d| ... }
 
   def test_full_name
     assert_equal 'C1::m', @c1.method_list.first.full_name
+  end
+
+  def test_markup_code
+    tokens = [
+      RDoc::RubyToken::TkCONSTANT. new(0, 0, 0, 'CONSTANT'),
+      RDoc::RubyToken::TkKW.       new(0, 0, 0, 'KW'),
+      RDoc::RubyToken::TkIVAR.     new(0, 0, 0, 'IVAR'),
+      RDoc::RubyToken::TkOp.       new(0, 0, 0, 'Op'),
+      RDoc::RubyToken::TkId.       new(0, 0, 0, 'Id'),
+      RDoc::RubyToken::TkNode.     new(0, 0, 0, 'Node'),
+      RDoc::RubyToken::TkCOMMENT.  new(0, 0, 0, 'COMMENT'),
+      RDoc::RubyToken::TkREGEXP.   new(0, 0, 0, 'REGEXP'),
+      RDoc::RubyToken::TkSTRING.   new(0, 0, 0, 'STRING'),
+      RDoc::RubyToken::TkVal.      new(0, 0, 0, 'Val'),
+      RDoc::RubyToken::TkBACKSLASH.new(0, 0, 0, '\\'),
+    ]
+
+    @c2_a.collect_tokens
+    @c2_a.add_tokens *tokens
+
+    expected = [
+      '<span class="ruby-constant">CONSTANT</span>',
+      '<span class="ruby-keyword">KW</span>',
+      '<span class="ruby-ivar">IVAR</span>',
+      '<span class="ruby-operator">Op</span>',
+      '<span class="ruby-identifier">Id</span>',
+      '<span class="ruby-node">Node</span>',
+      '<span class="ruby-comment">COMMENT</span>',
+      '<span class="ruby-regexp">REGEXP</span>',
+      '<span class="ruby-string">STRING</span>',
+      '<span class="ruby-value">Val</span>',
+      '\\'
+    ].join
+
+    assert_equal expected, @c2_a.markup_code
+  end
+
+  def test_markup_code_empty
+    assert_equal '', @c2_a.markup_code
   end
 
   def test_marshal_load
