@@ -68,6 +68,7 @@
   * __send__ and friends no longer get their underscores removed.  Patch by
     Thierry Lambert.
   * The C parser now makes new public when promoting initialize.
+  * Fix crash in #markup_code for TkUnknownChar.
 
 === 2.5.11 / 2010-08-20
 
